@@ -1,3 +1,8 @@
+2000-11-05  Havoc Pennington  <hp@pobox.com>
+
+	* gconf/gconf-glib.c (g_propagate_error): Sync from GLib,
+	should fix one very minor memory leak in GConf
+
 2000-10-31  Almer S. Tigelaar  <almer1@dds.nl>
 
 	* configure.in: Add 'nl' to ALL_LINGUAS
